Display answers on single line and prevent UI from jumping

--- a/frontend/src/components/Anagram.css
+++ b/frontend/src/components/Anagram.css
@@ -34,7 +34,7 @@
 @media only screen and (max-width: 900px) {
   .game-layout {
     grid-template-columns: 1fr;
-    grid-template-rows: 0.5fr 0.25fr 0.5fr;
+    grid-template-rows: 1fr 0.25fr 0.5fr;
     grid-template-areas:
       "anagram"
       "scores"
